# joulescope-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adversarial-reviews.md  design.md  testing.md
scripts/: hardware_smoke.py
src/joulescope_mcp/: __init__.py  server.py  service.py
tests/: test_server.py  test_service.py
