[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "joulescope-mcp"
version = "0.1.0"
description = "Model Context Protocol server for JouleScope JS220 precision energy analyzers"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Juan Quiroga" }
]
keywords = ["joulescope", "js220", "mcp", "power", "energy", "measurement"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
  "mcp>=1.23,<2",
  "pyjls>=0.17,<1",
  "pyjoulescope_driver>=2.1.0,<3",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.8",
]

[project.scripts]
joulescope-mcp = "joulescope_mcp.server:main"

[project.urls]
Homepage = "https://github.com/juanqui/joulescope-mcp"
Documentation = "https://github.com/juanqui/joulescope-mcp#readme"
Source = "https://github.com/juanqui/joulescope-mcp"
Issues = "https://github.com/juanqui/joulescope-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/joulescope_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
